// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Filter Popover Default 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 32px;
  min-width: 32px;
  overflow: hidden;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  box-shadow: none;
}

.c2 button::-moz-focus-inner {
  border: 10px dotted red;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c1 c2 trigger   "
      type="button"
    >
      Filter
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(8px)",
          }
        }
      >
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover With value set 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 32px;
  min-width: 32px;
  overflow: hidden;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  box-shadow: none;
}

.c2 button::-moz-focus-inner {
  border: 10px dotted red;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c1 c2 trigger active  "
      type="button"
    >
      Filter
      <div
        className="icon"
        style={
          Object {
            "marginLeft": 8,
          }
        }
      >
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M22 12c0 5.523-4.478 10-10 10-5.523 0-10-4.477-10-10C2 6.478 6.477 2 12 2c5.522 0 10 4.478 10 10zm-11.397 1.984l-1.38-1.447a1 1 0 00-1.447 1.38l2.166 2.273a1 1 0 001.503-.063l4.834-6a1 1 0 00-1.558-1.254l-4.118 5.111z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(8px)",
          }
        }
      >
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover With value set and custom Cancel label and handler 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 32px;
  min-width: 32px;
  overflow: hidden;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  box-shadow: none;
}

.c2 button::-moz-focus-inner {
  border: 10px dotted red;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c1 c2 trigger active  "
      type="button"
    >
      Filter
      <div
        className="icon"
        style={
          Object {
            "marginLeft": 8,
          }
        }
      >
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M22 12c0 5.523-4.478 10-10 10-5.523 0-10-4.477-10-10C2 6.478 6.477 2 12 2c5.522 0 10 4.478 10 10zm-11.397 1.984l-1.38-1.447a1 1 0 00-1.447 1.38l2.166 2.273a1 1 0 001.503-.063l4.834-6a1 1 0 00-1.558-1.254l-4.118 5.111z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(8px)",
          }
        }
      >
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover extended style 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c2 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 32px;
  min-width: 32px;
  overflow: hidden;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c2:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c2:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c2 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c2:not(:disabled):hover,
.c2:not(:disabled).hovered,
.c2:not(:disabled):active,
.c2:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c2:not(:disabled):hover .icon,
.c2:not(:disabled).hovered .icon,
.c2:not(:disabled):active .icon,
.c2:not(:disabled).active .icon,
.c2:not(:disabled):focus .icon,
.c2:not(:disabled).focused .icon {
  color: #3498db;
}

.c2:not(:disabled).active,
.c2:not(:disabled):active {
  box-shadow: none;
}

.c2:focus,
.c2.focused {
  outline: none;
}

.c2.focus-visible,
.c2.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c3 {
  box-shadow: none;
}

.c3 button::-moz-focus-inner {
  border: 10px dotted red;
}

.c1 {
  background: lightcyan;
  padding: 16px;
}

.c1 .trigger {
  -webkit-transform: rotate(0.5turn);
  -ms-transform: rotate(0.5turn);
  transform: rotate(0.5turn);
}

.c1 .formWrapper {
  background: lavender;
}

<div
  className="c0 c1"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c2 c3 trigger   "
      type="button"
    >
      Filter
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(8px)",
          }
        }
      >
        <span
          className="c4"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover formContent as a function 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 32px;
  min-width: 32px;
  overflow: hidden;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  box-shadow: none;
}

.c2 button::-moz-focus-inner {
  border: 10px dotted red;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c1 c2 trigger   "
      type="button"
    >
      Filter
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(8px)",
          }
        }
      >
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover zIndex 1`] = `
Array [
  .c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1;
  height: 32px;
  min-width: 32px;
  overflow: hidden;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  box-shadow: none;
}

.c2 button::-moz-focus-inner {
  border: 10px dotted red;
}

<div
    className="c0"
    width="auto"
  >
    <div
      className="popover__trigger"
      id="trigger"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 c2 trigger   "
        type="button"
      >
        Filter
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(8px)",
            }
          }
        >
          <span
            className="c3"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </div>
  </div>,
  <div
    style={
      Object {
        "background": "gainsboro",
        "height": 150,
        "opacity": 0.5,
        "position": "relative",
        "zIndex": 1,
      }
    }
  >
    Under
  </div>,
  <div
    style={
      Object {
        "background": "gainsboro",
        "height": 150,
        "opacity": 0.5,
        "position": "relative",
        "zIndex": 3,
      }
    }
  >
    Over
  </div>,
]
`;
